force-app/main/default/objects/Account/fields/Date_First_Opportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Opportunity_Created__c</fullName>
    <label>Date First Opportunity Created</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>