force-app/main/default/objects/Account/fields/Date_Last_Opportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Opportunity_Created__c</fullName>
    <label>Date Last Opportunity Created</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>