force-app/main/default/objects/Account/validationRules/Website_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Website_validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   RIGHT( Website , 4) &lt;&gt; &quot;.COM&quot;,
   RIGHT( Website, 4) &lt;&gt; &quot;.com&quot;,
   RIGHT( Website, 4) &lt;&gt; &quot;.ORG&quot;,
   RIGHT( Website, 4) &lt;&gt; &quot;.org&quot;,
   RIGHT( Website, 4) &lt;&gt; &quot;.NET&quot;,
   RIGHT( Website, 4) &lt;&gt; &quot;.net&quot;
 )</errorConditionFormula>
    <errorMessage>Web Site must have an extension of .com, .org, or .net .</errorMessage>
</ValidationRule>